Update NLog configuration and add trace logging for search functionality

--- a/NLog.config
+++ b/NLog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="">
+      internalLogLevel="Off" internalLogFile="/Users/your-username/Projects/YourProject/logs/nlog-internal.log">
 
  <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
