--- a/NLog.config
+++ b/NLog.config
@@ -31,6 +31,9 @@
             name="eventlog"
             source="${appName}"
             layout="${message}${newline}${exception:format=ToString}"/>
+    <target xsi:type="Debugger"
+          name="debugger"
+          layout="${message}"/>
     <target name="bugLogger"
 			  xsi:type="File"
 			  fileName="c:\temp\${appName}\BugLogger_${shortdate}.txt"
@@ -42,6 +45,6 @@
     <logger name="*" writeTo="default" minlevel="Debug" />
     <logger name="*" writeTo="eventlog" minlevel="Error" />
     <logger name="*" writeTo="debugger" minlevel="Info" />
-    <logger name="*" writeTo="bugLogger" minlevel="Info"/>
+    <logger name="LoggingPractice.*" writeTo="bugLogger" minlevel="Info"/>
   </rules>
 </nlog>
