--- a/NLog.config
+++ b/NLog.config
@@ -8,7 +8,7 @@
  <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-  <variable name="appName" value="LoggingPractice"/>
+  <variable name="appName" value="CreatingReports"/>
 
   <!--
   See https://github.com/nlog/nlog/wiki/Configuration-file
