--- a/CreatingReports.csproj
+++ b/CreatingReports.csproj
@@ -7,15 +7,16 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.18.1" />
-    <PackageReference Include="NLog" Version="5.4.0" />
-    <PackageReference Include="NLog.Config" Version="4.4.13" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1"/>
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1"/>
+    <PackageReference Include="Selenium.WebDriver" Version="4.18.1"/>
+    <PackageReference Include="NLog" Version="5.4.0"/>
+    <PackageReference Include="NLog.Config" Version="4.4.13"/>
+    <PackageReference Include="ExtentReports" Version="3.0.0"/>
   </ItemGroup>
   <ItemGroup>
-    <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
+    <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting"/>
   </ItemGroup>
 </Project>
